Changed Chart Library and Added Theming
-Changed chart to ngx, as its just way nicer to look at.
-Added theming, but due to non-material components, only light mode looks good.

--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 </head>
-<body class="mat-typography">
+<body class="mat-typography app-frame mat-app-background">
   <app-root></app-root>
 </body>
 </html>
